# NumericalToolBox

./: CMakeLists.txt  README.md  main.cpp
src/: LSF.h  linodesolver.h  matrixtemplate.h  matrixtoolbox.h  numerical_functions.h  print.h  vectortemplate.h
tests/: CMakeLists.txt  CVectorTest.cpp  MatrixTest.cpp  MatrixtoolboxTest.cpp
